@@ -45,10 +45,10 @@ FUNCTIONS {
 				"IF(!function_basename_library_gen) {",
 				"	# checking basename in libgen.h",
 				"	CHECK_HEADER(function_basename) {",
-				"		REQUIRED=FALSE",
-				"		LANG=\"$LANG\"",
-				"		NAME=\"libgen.h\"",
-				"		FUNCTION=basename",
+				"		REQUIRED = FALSE",
+				"		LANG = \"$LANG\"",
+				"		NAME = \"libgen.h\"",
+				"		FUNCTION = \"basename\"",
 				"	}",
 				"}")
 	
@@ -63,91 +63,91 @@ FUNCTIONS {
 				"IF(!function_dirname_library_gen) {",
 				"	# checking dirname in libgen.h",
 				"	CHECK_HEADER(function_dirname) {",
-				"		REQUIRED=FALSE",
-				"		LANG=\"$LANG\"",
-				"		NAME=\"libgen.h\"",
-				"		FUNCTION=dirname",
+				"		REQUIRED = FALSE",
+				"		LANG = \"$LANG\"",
+				"		NAME = \"libgen.h\"",
+				"		FUNCTION = \"dirname\"",
 				"	}",
 				"}")
 	
 	isblank=(	"# checking isblank in ctype.h",
 				"CHECK_HEADER(function_isblank) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"ctype.h\"",
-				"	FUNCTION=isblank",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"ctype.h\"",
+				"	FUNCTION = \"isblank\"",
 				"}")
 				
 	mkstemps=(	"# checking mkstemps in unistd.h",
 				"CHECK_HEADER(function_mkstemps) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"unistd.h\"",
-				"	FUNCTION=mkstemps",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"unistd.h\"",
+				"	FUNCTION = \"mkstemps\"",
 				"}")
 				
 	snprintf=(	"# checking snprintf in stdio.h",
 				"CHECK_HEADER(function_snprintf) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"stdio.h\"",
-				"	FUNCTION=snprintf",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"stdio.h\"",
+				"	FUNCTION = \"snprintf\"",
 				"}")
 				
 	strlcat=(	"# checking strlcat in string.h",
 				"CHECK_HEADER(function_strlcat) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"string.h\"",
-				"	FUNCTION=strlcat",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"string.h\"",
+				"	FUNCTION = \"strlcat\"",
 				"}")
 				
 	strlcpy=(	"# checking strlcpy in string.h",
 				"CHECK_HEADER(function_strlcpy) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"string.h\"",
-				"	FUNCTION=strlcpy",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"string.h\"",
+				"	FUNCTION = \"strlcpy\"",
 				"}")
 				
 	strdup=("# checking strdup in string.h",
 			"CHECK_HEADER(function_strdup) {",
-			"	REQUIRED=FALSE",
-			"	LANG=\"$LANG\"",
-			"	NAME=\"string.h\"",
-			"	FUNCTION=strdup",
+			"	REQUIRED = FALSE",
+			"	LANG = \"$LANG\"",
+			"	NAME = \"string.h\"",
+			"	FUNCTION = \"strdup\"",
 			"}")
 				
 	strndup=(	"# checking strndup in string.h",
 				"CHECK_HEADER(function_strndup) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"string.h\"",
-				"	FUNCTION=strndup",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"string.h\"",
+				"	FUNCTION = \"strndup\"",
 				"}")
 				
 	strndupa=(	"# checking strndupa in string.h",
 				"CHECK_HEADER(function_strndupa) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"string.h\"",
-				"	FUNCTION=strndupa",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"string.h\"",
+				"	FUNCTION = \"strndupa\"",
 				"}")
 				
 	vsnprintf=(	"# checking vsnprintf in stdio.h",
 				"CHECK_HEADER(function_vsnprintf) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"stdio.h\"",
-				"	FUNCTION=vsnprintf",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"stdio.h\"",
+				"	FUNCTION = \"vsnprintf\"",
 				"}")
 				
 	vsyslog=(	"# checking vsyslog in syslog.h",
 				"CHECK_HEADER(function_vsyslog) {",
-				"	REQUIRED=FALSE",
-				"	LANG=\"$LANG\"",
-				"	NAME=\"syslog.h\"",
-				"	FUNCTION=vsyslog",
+				"	REQUIRED = FALSE",
+				"	LANG = \"$LANG\"",
+				"	NAME = \"syslog.h\"",
+				"	FUNCTION = \"vsyslog\"",
 				"}")
 }
 
