@@ -95,8 +95,10 @@ enum {
 	FILE_TYPE_ASM,
 	FILE_TYPE_C,
 	FILE_TYPE_CXX,
+	FILE_TYPE_DATA,
+	FILE_TYPE_IMG,
+	FILE_TYPE_HTML,
 	FILE_TYPE_LEX,
-	FILE_TYPE_YACC,
 	/*
 		WARNING : respect the following order as it is used in pmkscan
 		procedures. Common type MAN is first followed by category types
@@ -112,10 +114,9 @@ enum {
 	FILE_TYPE_MAN7,
 	FILE_TYPE_MAN8,
 	FILE_TYPE_MAN9,		/* end of man categories */
-	FILE_TYPE_IMG,
-	FILE_TYPE_HTML,
+	FILE_TYPE_TEMPL,
 	FILE_TYPE_TEXT,
-	FILE_TYPE_DATA,
+	FILE_TYPE_YACC,
 	NB_FILE_TYPE		/* number of file type */
 };
 
@@ -133,10 +134,13 @@ enum {
 #define STR_TIME_GEN	"%Y-%m-%d %H:%M"
 
 #define PMKF_HDR_GEN	"# pmkfile generated by pmkscan (%s).\n\n"
-#define PMKF_SETTINGS	"SETTINGS {\n" \
-						"# list of template files (NEED MANUAL EDITION)\n" \
-						"\tTARGET = (\"Makefile.pmk\", \"config.pmk\")\n" \
-						"}\n\n"
+#define PMKF_BODY_END	"}\n\n"
+
+#define PMKF_SETTINGS	"SETTINGS {\n"
+#define PMKF_TRGT_CMT	"# list of template files\n"
+#define PMKF_TRGT_BEG	"\tTARGET = ("
+#define PMKF_TRGT_END	")\n"
+
 #define PMKF_DEF_BEG	"# main defines (MIGHT NEED MANUAL EDITION)\n" \
 						"DEFINE {\n" \
 						"\tPACKAGE = \"mypackage\"\n" \
@@ -167,7 +171,7 @@ enum {
 #define MKF_HEADER_LEX	"LEX=\t@LEX@\n" \
 						"LFLAGS=\t@LFLAGS@\n"
 
-#define MKF_HEADER_LD	"LD=\t\t@LD@\n" \
+#define MKF_HEADER_LD	"LINKER=\t\t@CC@\n" \
 						"# LDFLAGS shall contain -lc if used with ld\n" \
 						"LDFLAGS=\t@LDFLAGS@\n\n"
 
@@ -225,8 +229,11 @@ enum {
 #define MKF_OBJECT_LABL		"%s: $(%s_SRCS)\n"
 
 #define MKF_TARGET_OBJS		"%s_OBJS=\t"
-#define MKF_TARGET_LABL		"%s: $(%s_OBJS)\n" \
-							"\t$(LD) $(LDFLAGS) -o $@ $?\n\n"
+#define MKF_TARGET_LABL		"%s: $(%s_OBJS)\n"
+#define MKF_TARGET_DEF		"\t$(LD) $(LDFLAGS) -o $@ $?\n\n"
+#define MKF_TARGET_C		"\t$(CC) $(LDFLAGS) -o $@ $?\n\n"
+#define MKF_TARGET_CXX		"\t$(CXX) $(LDFLAGS) -o $@ $?\n\n"
+
 #define MKF_TARGET_CLN		"%s_clean:\n" \
 							"\t$(RM) $(RMFLAGS) $(%s_OBJS)\n" \
 							"\t$(RM) $(RMFLAGS) %s\n\n"
@@ -354,7 +361,8 @@ typedef struct {
 				*dirscan,				/* directory list to scan (just a pointer) */
 				*manpgs,				/* man pages dynary */
 				*datafiles,				/* data files dynary */
-				*discard;				/* discard list */
+				*discard,				/* discard list */
+				*templates;				/* template files */
 	htable		*nodes,					/* global nodes table */
 				*objects,				/* zone objects */
 				*targets,				/* zone targets */
