@@ -1,3 +1,6 @@
+09 Aug 2005 mipsator
+ * handle template files in pmkscan.
+
 06 Aug 2005 mipsator
  * added latest work done on pmkscan. The makefile generation is almost
    complete. Some work has to be done on pmkfile generation for the next
